Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.0
	 * Save:	7
	 * Network:	9

	Android		3
	CommandLine:	1.0.4.1
	Flash GUI:	1.0.3.5
	Increment1GUI:	1.1.1.1
	Simple GUI:	1.1.1.1
	Swing GUI:	1.0.6.4

1.1.1.0

	Android 3 FileChooser nullpointer fix
	Android 2 MapStore sprite wrong size on ldpi fix
	Android 1 DONE - layout attack dialog fully

1.1.0.9 (26.06.2012) ### released for Android on Google Play for the first time ###

	error now does not trigger a error box to pop up:
	 Could not open/create prefs root node Software\JavaSoft\Prefs at root 0x80000002. Windows RegCreateKeyEx(...) returned error code 5.
	if UNDO fails once, do not try and do undo any more
	recycle cards works more like it would in real life
	continue added to SwingGUI and FlashGUI and Android
	DONE - in the MapStore the "top downloaded" "Top New" text is not visable in mdpi
	download icon in MapStore changed to blue
	game can be played on Android

1.1.0.8 (02.04.2012)

	Fixed crash in AIHardCapital.java for map CRO.map and capital italianlike game
	copyright date fixed in About box
	memory usage smaller for PicturePanel, Castle in the Sky.map OutOfMemoryError
	can click to toggle animation at the end of the game
	mission to destroy a player show the players color as well as the name
	on Mac OS X the .sh files run correctly and have nice icons

1.1.0.7 (11.03.2012)

	spaces in names support for publishing new maps
	fixed nullpointer when you close the MapStore right after fetching a new XML file
	mapeditor saved map version inside map file
	update to grasshopper to not error on Logger.info and to correctly report errors in javaw mode

1.1.0.6 (08.01.2012)

	fixed xml not working sometimes when there are unicode chars
	fixed, show loading screens when loading data in MapStore
	fixed on windows 7, preview map image does not download correctly

1.1.0.5 (04.01.2012)

	got rid of Abba dependence, now just uses SwingME